# depla

./: Cargo.toml  LICENSE  README.md
ai/: Cargo.toml  README.md
ai/src/: lib.rs  python.rs
colosseum/: Cargo.toml  README.md
colosseum/src/: lib.rs  random.rs
launcher/: Cargo.toml  README.md
launcher/src/: main.rs
othello/: Cargo.toml  README.md
othello/src/: bit.rs  board.rs  data.rs  index.rs  lib.rs
othello/src/api/: board.rs  color.rs  data.rs  game.rs  mod.rs  position.rs
othello/src/game/: board.rs  color.rs  data.rs  human.rs  mod.rs  player.rs  position.rs  random.rs
othello/src/game/player/: human.rs  mod.rs  random.rs
othello/src/players/: human.rs  mod.rs  player.rs  random.rs
othello/src/processor/: mod.rs  moves.rs  player.rs
python/: ai.py  dataset.py
run/depla/: README.md  __init__.py  ai.py  cnn.py  dataset.py  utils.py
run/depla/experiment/: __init__.py  ex1.py  experiment.py  experiment1.py  experiment2.py  experiment3.py
run/python/: ai.py  cnn.py  dataset.py
run/result/: README.md
run/result/1/: cnn.pt  result.txt
run/result/2/1/: cnn.pt  result.txt
run/result/2/2/: cnn.pt  result.txt
run/result/2/3/: cnn.pt  result.txt
run/result/3/1/: cnn.pt  result.txt
run/result/3/2/: cnn.pt  result.txt
run/result/3/3/: cnn.pt  result.txt
run/result/3/4/: cnn.pt  result.txt
run/result/3/5/: cnn.pt  result.txt
run/result/3/6/: cnn.pt  result.txt
run/result/ex1/: cnn.pt
src/: ai.rs  airs.py  human.rs  io.rs  main.rs  othello.rs  u64.rs  wthor.rs
src/othello/: board.rs  data.rs  index.rs  mod.rs  processor.rs
wthor/: Cargo.toml  README.md
wthor/src/: bit.rs  data.rs  io.rs  lib.rs  option.rs  parser.rs  players.rs
wthor/src/data/: augmented.rs  dataset.rs  mod.rs  set.rs
wthor/src/moves/: mod.rs  option.rs
wthor/src/parser/: dataset.rs  mod.rs
wthor/src/players/: dataset.rs  mod.rs
