[package]
name = "depla"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["othello", "wthor"]

[dependencies]
anyhow = "1.0.52"
itertools = "0.10.3"
rand = "0.8.4"

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[dependencies.othello]
path = "othello"
