[package]
name = "depla"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["othello", "wthor", "launcher"]

[dependencies]
anyhow = "1.0.52"
rand = "0.8.4"
ndarray = "0.15.4"
numpy = "0.15.1"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize", "anyhow"]

[dependencies.othello]
path = "othello"
features = ["api", "processor"]

[profile.release]
lto = "fat"
codegen-units = 1
