[package]
name = "depla"
version = "1.0.0"
edition = "2021"

[workspace]
members = [
    "othello",
    "wthor",
    "ai",
    "colosseum",
    "launcher"
]

[dependencies]
anyhow = "1.0.52"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[dependencies.othello]
path = "othello"
features = ["api", "processor"]

[dependencies.ai]
path = "ai"

[profile.release]
lto = true
codegen-units = 1
