[package]
name = "wthor"
version = "0.1.0"
edition = "2021"

[lib]
name = "wthor"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.52"
ndarray = "0.15.4"
numpy = "0.15.1"

[dependencies.othello]
path = "../othello"

[dependencies.tokio]
version = "1.15.0"
features = ["rt-multi-thread", "sync", "fs", "io-util"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "anyhow"]
