[package]
name = "wthor"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.52"
ndarray = "0.15.4"
numpy = "0.15.1"

[dependencies.othello]
path = "../othello"
features = ["api", "processor"]

[dependencies.tokio]
version = "1.15.0"
features = ["rt-multi-thread", "sync", "fs", "io-util"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module", "anyhow"]
